--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "precommit": "pretty-quick --staged && npm run lint",
     "pretty-quick": "pretty-quick",
     "start": "tsc --watch",
-    "test": "jest --no-cache",
+    "test": "jest --no-cache --maxWorkers 2",
     "test.prod": "npm run lint && npm run test -- --coverage --no-cache",
     "test.watch": "jest --watch --no-cache",
     "lint": "tslint  --project tsconfig.json -t codeFrame src/**/*.ts test/**/*.ts",
