Updated standard-api-generator to latest version

--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
   "devDependencies": {
     "@types/bignumber.js": "^5.0.0",
     "@types/jest": "^23.3.14",
+    "jest": "^23.6.0",
     "prettier": "^1.16.4",
     "pretty-quick": "^1.10.0",
     "shx": "^0.3.2",
@@ -52,8 +53,7 @@
     "tslint": "^5.15.0",
     "tslint-config-prettier": "^1.18.0",
     "tslint-config-standard": "^8.0.1",
-    "typescript": "^3.4.1",
-    "jest": "^23.6.0"
+    "typescript": "^3.4.1"
   },
   "dependencies": {
     "bignumber.js": "^7.2.1",
