--- a/package.json
+++ b/package.json
@@ -57,9 +57,10 @@
   },
   "dependencies": {
     "bignumber.js": "^7.2.1",
-    "htmltidy": "0.0.6",
     "jdu": "^1.0.0",
-    "unicode-substring": "^1.0.0"
+    "tidy-html5": "^0.1.1",
+    "unicode-substring": "^1.0.0",
+    "xslt-processor": "^0.11.5"
   },
   "jest": {
     "transform": {
