--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "test.prod": "npm run lint && npm run test -- --coverage --no-cache",
     "test.watch": "jest --watch --no-cache",
     "lint": "tslint  --project tsconfig.json -t codeFrame src/**/*.ts test/**/*.ts",
-    "validate": "npm run lint && npm run test && npm run build",
+    "validate": "npm run lint && npm run test && npm run generate-api && npm run build",
     "generate-api": "cd ./node_modules/standard-api-generator && node ./index.js -o ../../src/generator/options.json && cd ../.."
   },
   "files": [
@@ -44,6 +44,7 @@
   "devDependencies": {
     "@types/bignumber.js": "^5.0.0",
     "@types/jest": "^23.3.14",
+    "husky": "^1.3.1",
     "jest": "^23.6.0",
     "prettier": "^1.16.4",
     "pretty-quick": "^1.10.0",
