--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "luxon": "^1.12.0",
     "tidy-html5": "^0.1.1",
     "unicode-substring": "^1.0.0",
+    "uuid": "^3.3.2",
     "xslt-processor": "^0.11.5"
   },
   "jest": {
