Fix build scripts
Getting Started was not working correctly because api-generator was not
executed on npm start and npm build.

--- a/package.json
+++ b/package.json
@@ -6,19 +6,19 @@
   "module": "dist/lib-esm/index.js",
   "typings": "dist/types/index.d.ts",
   "scripts": {
-    "build": "npm run clean && npm run build.commonjs && npm run build.es6",
+    "build": "npm run clean && npm run generate-api && npm run build.commonjs && npm run build.es6",
     "build.commonjs": "tsc",
     "build.es6": "tsc -m es6 --outDir ./dist/lib-esm",
-    "clean": "shx rm -rf ./dist",
+    "clean": "shx rm -rf ./dist && shx rm -rf ./src/generator/out",
+    "generate-api": "cd ./node_modules/standard-api-generator && node ./index.js -o ../../src/generator/options.json && cd ../..",
+    "lint": "tslint  --project tsconfig.json -t codeFrame src/**/*.ts test/**/*.ts",
     "precommit": "pretty-quick --staged && npm run lint",
     "pretty-quick": "pretty-quick",
-    "start": "tsc --watch",
+    "start": "npm run generate-api && tsc --watch",
     "test": "env-cmd ./test/.env jest --no-cache --maxWorkers 2",
     "test.prod": "npm run lint && npm run test -- --coverage --no-cache",
     "test.watch": "jest --watch --no-cache",
-    "lint": "tslint  --project tsconfig.json -t codeFrame src/**/*.ts test/**/*.ts",
-    "validate": "npm run lint && npm run generate-api && npm run test && npm run build",
-    "generate-api": "cd ./node_modules/standard-api-generator && node ./index.js -o ../../src/generator/options.json && cd ../.."
+    "validate": "npm run lint && npm run test && npm run build"
   },
   "files": [
     "dist",
