--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "bignumber.js": "^7.2.1",
     "full-icu": "^1.2.1",
     "jdu": "^1.0.0",
+    "jstz": "^2.1.1",
     "luxon": "^1.12.0",
     "tidy-html5": "^0.1.1",
     "unicode-substring": "^1.0.0",
