--- a/package.json
+++ b/package.json
@@ -49,7 +49,6 @@
     "env-cmd": "^8.0.2",
     "husky": "^2.4.0",
     "jest": "^24.8.0",
-    "wait-for-expect": "^1.2.0",
     "prettier": "^1.16.4",
     "pretty-quick": "^1.10.0",
     "shx": "^0.3.2",
@@ -58,7 +57,8 @@
     "tslint": "^5.17.0",
     "tslint-config-prettier": "^1.18.0",
     "tslint-config-standard": "^8.0.1",
-    "typescript": "^3.4.1"
+    "typescript": "^3.4.1",
+    "wait-for-expect": "^1.2.0"
   },
   "dependencies": {
     "bignumber.js": "^7.2.1",
