--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "husky": "^2.4.0",
     "jest": "^24.8.0",
     "jest-websocket-mock": "^1.5.0",
-    "mock-socket": "^9.0.0",
+    "mock-socket": "~8.0",
     "prettier": "^1.16.4",
     "pretty-quick": "^1.10.0",
     "shx": "^0.3.2",
