--- a/package.json
+++ b/package.json
@@ -43,27 +43,28 @@
   },
   "homepage": "https://github.com/genexuslabs/web-standard-functions#readme",
   "devDependencies": {
-    "@types/bignumber.js": "^5.0.0",
-    "@types/jest": "^23.3.14",
+    "@types/jest": "^27.0.2",
     "@types/pubsub-js": "^1.5.18",
+    "atob": "^2.1.2",
+    "btoa": "^1.2.1",
     "env-cmd": "^8.0.2",
     "husky": "^2.7.0",
-    "jest": "^24.9.0",
+    "jest": "^27.0.5",
     "jest-websocket-mock": "^1.5.1",
     "mock-socket": "~8.0",
     "prettier": "^1.19.1",
     "pretty-quick": "^1.11.1",
     "shx": "^0.3.2",
     "standard-api-generator": "git+https://github.com/genexuslabs/standard-api-generator.git",
-    "ts-jest": "^26.4.4",
+    "ts-jest": "^27.0.5",
     "tslint": "^5.20.1",
     "tslint-config-prettier": "^1.18.0",
     "tslint-config-standard": "^8.0.1",
     "typescript": "^3.8.2",
-    "wait-for-expect": "^1.3.0"
+    "wait-for-expect": "^3.0.2"
   },
   "dependencies": {
-    "@types/websocket": "0.0.40",
+    "@types/websocket": "^1.0.4",
     "bignumber.js": "^7.2.1",
     "full-icu": "^1.3.0",
     "jdu": "^1.0.0",
@@ -73,7 +74,7 @@
     "pubsub-js": "^1.8.0",
     "tidy-html5": "^0.1.1",
     "unicode-substring": "^1.0.0",
-    "uuid": "^3.4.0",
+    "uuid": "^8.3.2",
     "xslt-processor": "^0.11.5"
   },
   "jest": {
@@ -88,7 +89,8 @@
       "jsx",
       "json",
       "node"
-    ]
+    ],
+    "testEnvironment": "jsdom"
   },
   "coveragePathIgnorePatterns": [
     "/node_modules/",
