--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,5 +13,5 @@
     "jsx": "react"
   },
   "include": ["./src/**/*"],
-  "exclude": ["node_modules", "**/*.spec.ts"]
+  "exclude": ["node_modules", "**/*.spec.ts", "**/generator"]
 }
