--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,6 @@
     "declaration": true,
     "jsx": "react"
   },
-  "include": ["./src/**/*"],
+  "include": ["./src/**/*.ts"],
   "exclude": ["node_modules", "src/**/**/*.spec.ts", "**/generator"]
 }
