--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,5 +13,5 @@
     "jsx": "react"
   },
   "include": ["./src/**/*.ts"],
-  "exclude": ["node_modules", "src/**/**/*.spec.ts", "**/generator"]
+  "exclude": ["node_modules", "src/**/**/*.spec.ts"]
 }
